tests/errors/semantic_error_4.fm
PASTA_RAIZ "/pasta/que/nao/existe/abcd";
REGRA SE $NOME EH "teste.txt" ENTAO EXCLUIR;
